--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -43,7 +43,7 @@
     font-size: 14px;
     font-family: NotoSansJP-Medium;
     text-decoration: none;
-    padding: 14px 40px;
+    padding: 14px 0px 14px 48px;
 }
 
 .list-group-item-dk:hover {
@@ -92,14 +92,17 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 }
 
 #sidebar-wrapper .sidebar-heading {
-    padding: 2.875rem 1.25rem 31px;
+    padding: 2.5rem 1.25rem 17px 16px;
     font-size: 16px;
     font-family: NotoSansJP-Bold;
     color: #fff;
+    display: flex;
+    align-items: center;
 }
 
 #sidebar-wrapper .sidebar-heading svg {
     width: 24px;
+    height: 20px;
 }
 
 #sidebar-wrapper .list-group {
