--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -88,7 +88,7 @@
 .order-reg-card {
     background-color: #fff;
     border-radius: 4px;
-    box-shadow: 0px 3px 6px var(--black)29;
+    box-shadow: 0px 3px 6px var(--black);
     padding: 40px 48px 48px 48px;
 }
 
@@ -96,8 +96,6 @@
     background-image: url('../images/bg-img.png');
     background-position: center;
     background-size: cover;
-    /* width: 100%;
-    height: 100vh; */
 }
 
 .sidebar {
@@ -181,7 +179,7 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 }
 
 .off-radio-btn {
-    background-color: var( --whisper);
+    background-color: var(--whisper);
     color: var(--charcoal);
 }
 
@@ -283,7 +281,6 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
     display: inline-block;
     box-sizing: border-box;
     padding: 0.5em 2em 0.5em 0.5em;
-    /* border: 1px solid #eee; */
     font: inherit;
     line-height: inherit;
     -webkit-appearance: none;
