--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -393,6 +393,17 @@ tr:nth-child(even) {
     border-radius: 2px;
     border:1px solid #BEA000; 
 }
+.footer-nav-tab {
+    background-color: var(--black);
+    width: 100%;
+    padding: 10px 5px;
+}
+.footer-links {
+    font-size: 12px;
+    color: var(--white);
+    padding: 0px 5px;
+    font-family: SourceHanSansJP-Regular;
+}
 @media screen and (max-width: 920px) and (min-width:769px) {
     .order-reg-card {
         padding: 48px 15px;
