--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -66,7 +66,24 @@
     /* float: none; */
     margin-left: auto;
 }
-
+.mbile-top-nav-setting{
+display: none;
+}
+.setting-toggle-end a:hover ,.setting-toggle-end a:active{
+background: #BEA000;
+color: var(--black);
+opacity: 0.3;
+}
+.setting-toggle{
+    background-color: #ffff;
+    width: 76px;
+    height: 32px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black !important;
+}
 .list-group-item-dk {
     color: var(--primary);
     font-size: 14px;
@@ -438,7 +455,7 @@ tr:nth-child(even) {
 
 @media screen and (max-width: 768px) {
     .order-reg-card {
-        padding: 30px 15px;
+        padding: 30px 8px;
     }
 
     .switch-btns {
@@ -469,4 +486,14 @@ tr:nth-child(even) {
         width: 71px;
         height: 42px;
     }
+    .mbile-top-nav-setting{
+        display: block;
+        }
+        .content-h1 , .order-reg-h2{
+            text-align: center;
+        }
+        .form-fields select{
+            height: 48px;
+        }
+       
 }
