--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -72,7 +72,143 @@
     font-family: NotoSansJP-Thin;
     src: url(../css/fonts/googlefonts/NotoSansJP-Thin.otf);
 } 
-
+/* login */
+/*//////////////////////////////////////////////////////////////////
+[ login ]*/
+.limiter {
+    width: 100%;
+    margin: 0 auto;
+  }
+  
+  .container-login100 {
+    width: 100%;  
+    min-height: 100vh;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  
+  .wrap-login100 {
+    width: 388px;
+    height: 70vh;
+    background: #fff;
+    overflow: hidden;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 77px 15px 15px 15px;
+  }
+  
+  
+  /*------------------------------------------------------------------
+  [ Form ]*/
+  
+  .login100-form {
+    width: 100%;
+  }
+  
+  .login100-form-title {
+    display: block;
+    font-family: Poppins-Bold;
+    font-size: 39px;
+    color: #333333;
+    line-height: 1.2;
+    text-align: center;
+    padding-bottom: 49px;
+  }
+  
+  
+  
+  /*------------------------------------------------------------------
+  [ Input ]*/
+  
+  .wrap-input100{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 23px;
+  }
+  
+  .label-input100 {
+    font-family: Poppins-Regular;
+    font-size: 14px;
+    color: #333333;
+    margin-bottom: 3px;
+  
+   
+  }
+  
+  .input100 {
+    border: 1px solid #A5A5A5;
+    border-radius: 4px;
+    background-color: #fff;
+    width: 248px;
+    height: 38px;
+    padding: 10px;
+  }
+  
+  .lcm-logo{
+    width: 148px;
+    height: 48px;
+    display: flex;
+    margin: auto;
+  }
+  /*---------------------------------------------*/
+  
+  
+  
+  
+  /*------------------------------------------------------------------
+  [ Button ]*/
+  .container-login100-form-btn {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 46px;
+  
+  }
+  
+  
+  /*//////////////////////////////////////////////////////////////////
+  [ Responsive ]*/
+  
+  @media (max-width: 576px) {
+    .wrap-login100 {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  } 
+  
+  
+  .login-logo{
+      width: 196px;
+      margin: auto;
+      display: flex;
+  }
+  .login100-form-btn{
+    background-color: #BEA000;
+    color: #fff;
+    border-radius: 2px;
+    font-size: 12px;
+    width: 128px;
+    height: 30px;
+  }
 /* custom date icon css start  */
 .date input::-webkit-inner-spin-button,
 .date input::-webkit-clear-button {
