--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -617,7 +617,6 @@ table.dataTable thead>tr>td.sorting_desc:after {
 }
 .table-responsive-sm{
     position: relative;
-    overflow-x: scroll;
 }
 
 .custom-table-list td:nth-child(even) {
@@ -639,8 +638,11 @@ table.dataTable thead>tr>td.sorting_desc:after {
     margin-left: 10px;
 }
 
-.table-card td {
+.custom-table-list.dataTable tbody th, .custom-table-list.dataTable tbody td{
     font-size: 12px;
+    padding: 4px 8px;
+    border-top: 0px;
+    vertical-align: middle;
 
 }
 
@@ -667,7 +669,7 @@ table.dataTable thead>tr>td.sorting_desc:after {
 }
 
 .revision-btn {
-    width: 58px;
+    width: 56px;
     height: 30px;
     display: inline-flex;
     align-items: center;
@@ -677,9 +679,19 @@ table.dataTable thead>tr>td.sorting_desc:after {
     border-radius: 2px;
     margin-right: 4px;
 }
-
+.taking-btn{
+    width: 80px;
+    height: 30px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--secondary);
+    color: #fff;
+    border-radius: 2px;
+    margin-right: 4px;
+}
 .copy-content-btn {
-    width: 70px;
+    width: 67px;
     height: 30px;
     display: inline-flex;
     align-items: center;
@@ -689,7 +701,9 @@ table.dataTable thead>tr>td.sorting_desc:after {
     border-radius: 2px;
     margin-right: 4px;
 }
-
+.order_date{
+    width: 120px;
+}
 .copy-content-btn:hover {
     color: #fff;
     text-decoration: none;
@@ -764,6 +778,10 @@ table.dataTable thead>tr>td.sorting_desc:after {
 }
 
 @media screen and (max-width: 920px) and (min-width:769px) {
+    .table-responsive-sm{
+        position: relative;
+        overflow-x: scroll;
+    }
     .order-reg-card {
         padding: 48px 15px;
     }
