--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -751,11 +751,20 @@ table.dataTable thead>tr>td.sorting_desc:after {
 
 .account-reg-input input {
     height: 37px;
-    width: 219px;
     width: 100%;
-    padding: 6.5px 16.5px;
+    padding: 5px 15px;
+    border: 1px solid #0000001F;
+    border-radius: 4px;
 }
+.switch-btns-registration input[type=radio]{
+display: none;
 
+}
+.master-form-col{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
 .account-input-content {
     gap: 30px;
     margin-bottom: 13px;
@@ -872,6 +881,7 @@ table.dataTable thead>tr>td.sorting_desc:after {
 }
 
 @media screen and (max-width: 768px) {
+    
     .custom-table-list.dataTable {
         width: max-content;
     }
