--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -313,9 +313,11 @@
 body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
     margin-left: 0;
 }
-#sidebar-wrapper .router-link-exact-active{
-background-color: #333333;
+
+#sidebar-wrapper .router-link-exact-active {
+    background-color: #333333;
 }
+
 #wrapper {
     overflow-x: hidden;
 }
@@ -552,6 +554,7 @@ background-color: #333333;
 
 .model-no-list {
     display: flex;
+    flex-wrap: wrap;
 
 }
 
@@ -618,7 +621,8 @@ table.dataTable thead>tr>td.sorting_asc:before,
 table.dataTable thead>tr>td.sorting_desc:after {
     color: var(--secondary);
 }
-.table-responsive-sm{
+
+.table-responsive-sm {
     position: relative;
 }
 
@@ -633,16 +637,19 @@ table.dataTable thead>tr>td.sorting_desc:after {
 .custom-table-list tbody tr:nth-of-type(odd) {
     background-color: inherit;
 }
-.custom-table-list th{
+
+.custom-table-list th {
     font-size: 12px;
 }
+
 .btn-rev-del {
     display: inline-flex;
     margin-left: 10px;
     gap: 5px;
 }
 
-.custom-table-list.dataTable tbody th, .custom-table-list.dataTable tbody td{
+.custom-table-list.dataTable tbody th,
+.custom-table-list.dataTable tbody td {
     font-size: 12px;
     padding: 4px 8px;
     border-top: 0px;
@@ -683,7 +690,8 @@ table.dataTable thead>tr>td.sorting_desc:after {
     border-radius: 2px;
     margin-right: 4px;
 }
-.taking-btn{
+
+.taking-btn {
     width: 80px;
     height: 30px;
     display: inline-flex;
@@ -694,7 +702,8 @@ table.dataTable thead>tr>td.sorting_desc:after {
     border-radius: 2px;
     margin-right: 4px;
 }
-.taking-out-btn{
+
+.taking-out-btn {
     width: 56px;
     height: 30px;
     display: inline-flex;
@@ -703,12 +712,14 @@ table.dataTable thead>tr>td.sorting_desc:after {
     background: var(--secondary);
     color: #fff;
     border-radius: 2px;
- 
+
 }
-.taking-out-btn:hover{
+
+.taking-out-btn:hover {
     color: #fff;
     text-decoration: none;
 }
+
 .copy-content-btn {
     width: 67px;
     height: 30px;
@@ -720,6 +731,7 @@ table.dataTable thead>tr>td.sorting_desc:after {
     border-radius: 2px;
     margin-right: 4px;
 }
+
 .carryout-btn {
     width: 68px;
     height: 30px;
@@ -731,13 +743,16 @@ table.dataTable thead>tr>td.sorting_desc:after {
     border-radius: 2px;
     margin-right: 4px;
 }
-.carryout-btn:hover{
+
+.carryout-btn:hover {
     color: #fff;
     text-decoration: none;
 }
-.order_date{
+
+.order_date {
     width: 120px;
 }
+
 .copy-content-btn:hover {
     color: #fff;
     text-decoration: none;
@@ -756,15 +771,18 @@ table.dataTable thead>tr>td.sorting_desc:after {
     border: 1px solid #0000001F;
     border-radius: 4px;
 }
-.switch-btns-registration input[type=radio]{
-display: none;
+
+.switch-btns-registration input[type=radio] {
+    display: none;
 
 }
-.master-form-col{
-    display:flex;
+
+.master-form-col {
+    display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .account-input-content {
     gap: 30px;
     margin-bottom: 13px;
@@ -776,6 +794,7 @@ display: none;
     justify-content: end;
     gap: 9px;
 }
+
 /* ACCOUNT REGISTRATION CSS END  */
 .complete-btn {
     background-color: #BEA000;
@@ -788,7 +807,8 @@ display: none;
     border-radius: 2px;
     border: 1px solid #BEA000;
 }
-.construction-btn{
+
+.construction-btn {
     background-color: #BEA000;
     color: #fff;
     display: flex;
@@ -800,6 +820,7 @@ display: none;
     border: 1px solid #BEA000;
     margin-left: 40px;
 }
+
 .footer-nav-item {
     margin: 12px 0px;
 }
@@ -829,11 +850,237 @@ display: none;
     text-decoration: none;
 }
 
+.master-registration-left-content {
+    display: inline-block;
+}
+
+.master-registration-input-content span {
+    margin-right: 30px;
+    color: #000000;
+    font-size: 16px;
+    letter-spacing: 0.15px;
+}
+
+.master-reg-input {
+    padding: 6.5px 16.5px;
+    height: 48px;
+    border: 1px solid #0000001F;
+    border-radius: 4px;
+    width: 219px;
+}
+
+.master-registration-form {
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 3px 6px var(--black);
+    padding: 40px 0px 48px 48px;
+}
+
+.master-registration-content {
+    padding: 24px;
+    background-image: url(assets/images/bg-img.png);
+}
+
+thead tr th {
+    width: 130px;
+    text-align: center;
+    background: black;
+    color: #ffffff;
+    font-size: 12px;
+    padding: 8px 0px;
+}
+
+tbody tr {
+    margin: 12px auto !important;
+}
+
+tbody tr td {
+    text-align: center;
+    /* text-align: left; */
+    font-size: 12px;
+    letter-spacing: 0px;
+    color: #000000;
+    opacity: 1;
+}
+
+tbody tr td:nth-child(2) {
+    width: 430px;
+    text-align: center;
+}
+
+/* BUTTONS  */
+.register-buttons {
+    margin-top: 13px;
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
+
+}
+
+.reg-button {
+    border: none;
+    border-radius: 5px;
+    padding: 0px;
+    width: 56px;
+    height: 30px;
+    font-size: 12px;
+    font-family: NotoSansJP-Medium;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background: #BEA000;
+
+}
+
+.clear-btn {
+    background-color: #000000;
+    border: 1px solid #000000;
+    color: #fff;
+    width: 56px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 2px;
+}
+
+.register-btn {
+    background-color: #BEA000;
+    border: 1px solid #BEA000;
+    color: #fff;
+    width: 56px;
+    border-radius: 2px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.clear-btn:hover,
+.register-btn:hover {
+    text-decoration: none;
+    color: #fff;
+}
+
+.update-btn:hover {
+    text-decoration: none;
+    color: #fff;
+}
+
+.update-btn {
+    background-color: #2F9456;
+    border: 1px solid #2F9456;
+    color: #fff;
+    width: 110px;
+    height: 42px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.master-input-content label {
+    margin-bottom: 8px;
+}
+
+.btn-grouped .btn {
+    padding: 0px;
+}
+
+.btn-grouped {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
+.master-reg-row {
+    display: flex;
+    justify-content: space-between;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 0;
+}
+
+.master-reg-form {
+    width: 40%;
+
+}
+
+.table-col {
+    width: 50%;
+}
+
+.gmaccount-reg-content {
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 3px 6px var(--black);
+    padding: 40px 0px 48px 48px;
+}
+
+.generated-reg-input input {
+    height: 37px;
+    width: 100%;
+    max-width: 100%;
+    padding: 0px 15px;
+    color: #00000099;
+    border: 1px solid #0000001F;
+    border-radius: 4px;
+}
+
+.master-input-content {
+    gap: 30px;
+    display: inline-flex;
+    width: 110px;
+}
+
+.registration-left-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.registration-table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.registration-table td,
+.registration-table th {
+    /* border: 1px solid #ddd; */
+    padding: 8px;
+    font-size: 12px;
+    text-align: center;
+}
+
+.registration-table tr:hover {
+    background-color: #ddd;
+}
+
+.registration-table th {
+
+    text-align: left;
+    background-color: black;
+    color: white;
+    height: 32px;
+    font-size: 12px;
+    text-align: center;
+}
+
+.account-reg-buttons {
+    margin-top: 20px;
+}
+
 @media screen and (max-width: 920px) and (min-width:769px) {
-    .table-responsive-sm{
+    .table-responsive-sm {
         position: relative;
         overflow-x: scroll;
     }
+
     .order-reg-card {
         padding: 48px 15px;
     }
@@ -854,12 +1101,14 @@ display: none;
     .form-control {
         width: 180px !important;
     }
+
     .custom-table-list.dataTable {
         width: max-content;
     }
 }
 
 @media (min-width: 768px) {
+
 
 
     #sidebar-wrapper {
@@ -881,10 +1130,31 @@ display: none;
 }
 
 @media screen and (max-width: 768px) {
-    
+    .table-col {
+        width: 100%;
+    }
+
+    .master-reg-form {
+        width: 100%;
+        margin-bottom: 45px;
+    }
+
+    .gmaccount-reg-content {
+        padding: 40px 8px 48px 8px;
+    }
+
+    .master-reg-row {
+        flex-direction: column;
+    }
+
+    .master-registration-form {
+        padding: 40px 8px 48px 8px;
+    }
+
     .custom-table-list.dataTable {
         width: max-content;
     }
+
     .footer-nav-section {
         display: block;
     }
